--- a/build.gradle
+++ b/build.gradle
@@ -1,81 +1,54 @@
-buildscript {
-    ext {
-        springBootVersion = '1.5.2.RELEASE'
-    }
-    repositories {
-        maven {
-           url "https://plugins.gradle.org/m2/"
-        }
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
-    }
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.0'
+    id 'application'
 }
 
-configurations {
-    integration
-    integrationCompile.extendsFrom testCompile
-    integrationRuntime.extendsFrom testRuntime
-}
-
-apply plugin: 'groovy'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-
-jar {
-    baseName = 'base'
-    version = '0.0.1-SNAPSHOT'
-}
+group 'com.tradingcentral'
 
 sourceCompatibility = 1.8
 
-sourceSets {
-    integration {
-        compileClasspath += main.output + test.output
-        runtimeClasspath += main.output + test.output
-
-        groovy.srcDir file('src/test/integration/groovy')
-    }
+application {
+    mainClassName = "com.tradingcentral.dowjones.ApplicationKt"
 }
 
-idea {
-    module {
-        scopes.TEST.plus = [configurations.integration]
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.tradingcentral.dowjones.ApplicationKt'
+        )
     }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }}
 }
+
 repositories {
     mavenCentral()
 }
 
-
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-jersey') {
-        exclude module: "spring-boot-starter-tomcat"
-    }
-
-    compile("org.springframework.boot:spring-boot-starter-jetty")
-
-    //compile('org.codehaus.groovy:groovy:2.4.9')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    compile("org.grails:gorm-hibernate5-spring-boot:6.0.9.RELEASE")
-    runtime('mysql:mysql-connector-java:6.0.5')
-
-    testCompile 'org.spockframework:spock-spring:1.0-groovy-2.4'
-    // optional dependencies for using Spock
-    testCompile "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
-    testRuntime "cglib:cglib-nodep:3.1" // allows mocking of classes (in addition to interfaces)
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.381'
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.2")
+    testCompile("org.assertj:assertj-core:3.11.1")
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
 }
 
-task integration(type: Test) {
-    testClassesDir = sourceSets.integration.output.classesDir
-    classpath = sourceSets.integration.runtimeClasspath
-
-    // This is not needed, but I like to see which tests have run
-    testLogging {
-        events "passed", "skipped", "failed"
-    }
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+test {
+    useJUnitPlatform()
+    systemProperty 'junit.jupiter.conditions.deactivate', '*'
+    systemProperties = [
+            'junit.jupiter.extensions.autodetection.enabled': 'true',
+            'junit.jupiter.testinstance.lifecycle.default': 'per_class'
+    ]
+}
+
+buildDir = "services/dowjones/build"
