--- a/build.gradle
+++ b/build.gradle
@@ -1,54 +1,12 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.0'
-    id 'application'
-}
-
-group 'com.tradingcentral'
-
-sourceCompatibility = 1.8
-
-application {
-    mainClassName = "com.tradingcentral.dowjones.ApplicationKt"
-}
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'com.tradingcentral.dowjones.ApplicationKt'
-        )
-    }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }}
 }
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.381'
-    testCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
-    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.2")
-    testCompile("org.assertj:assertj-core:3.11.1")
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+    compile 'com.google.guava:guava:23.0'
+    testCompile 'junit:junit:4.12'
 }
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-test {
-    useJUnitPlatform()
-    systemProperty 'junit.jupiter.conditions.deactivate', '*'
-    systemProperties = [
-            'junit.jupiter.extensions.autodetection.enabled': 'true',
-            'junit.jupiter.testinstance.lifecycle.default': 'per_class'
-    ]
-}
-
-buildDir = "services/dowjones/build"
